--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block Spark - Pupu Games</title>
+    <title>Block Canvas - Pupu Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&family=Outfit:wght@500;700;900&display=swap"
@@ -131,7 +131,7 @@
                 <h1 class="text-6xl md:text-8xl font-display font-black leading-tight mb-6">
                     BLOCK<br>
                     <span
-                        class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-400 text-glow">SPARK</span>
+                        class="text-transparent bg-clip-text bg-gradient-to-r from-white to-gray-400 text-glow">CANVAS</span>
                 </h1>
 
                 <p class="text-xl text-gray-400 max-w-lg mb-10 leading-relaxed">
@@ -164,7 +164,7 @@
                 <div class="relative z-10 w-[320px] mx-auto animate-float"
                     style="transform: rotateY(-15deg) rotateX(5deg);">
                     <div class="absolute inset-0 bg-pupu-accent blur-[100px] opacity-20 rounded-full"></div>
-                    <img src="assets/gameplay-2.jpg" alt="Block Spark Gameplay"
+                    <img src="assets/gameplay-2.jpg" alt="Block Canvas Gameplay"
                         class="relative rounded-[2.5rem] border-[8px] border-black shadow-2xl">
                 </div>
             </div>
