facebook meta data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="x1aavlv1lq1lti3hdmkz5a0hzwo823" />
     <title>Block Canvas - Pupu Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
