--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </div>
                     </button>
 
-                    <button
+                    <button href="https://play.google.com/store/apps/details?id=com.pupuhk.block"
                         class="flex items-center gap-3 glass-card text-white px-8 py-4 rounded-2xl font-bold hover:bg-white/10 transition hover:-translate-y-1">
                         <i class="fa-brands fa-google-play text-2xl text-white/80"></i>
                         <div class="text-left leading-none">
