--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
                 </p>
 
                 <div class="flex flex-wrap gap-4">
-                    <button
+                    <a href="https://apps.apple.com/us/app/block-canvas-pixel-art-puzzle/id6756554734" target="_blank"
                         class="flex items-center gap-3 bg-white text-black px-8 py-4 rounded-2xl font-bold hover:bg-gray-200 transition hover:-translate-y-1 shadow-xl shadow-white/5">
                         <i class="fa-brands fa-apple text-2xl"></i>
                         <div class="text-left leading-none">
                             <span class="block text-xs font-medium mb-1 opacity-70">Download on the</span>
                             <span class="block text-lg">App Store</span>
                         </div>
-                    </button>
+                    </a>
 
-                    <button href="https://play.google.com/store/apps/details?id=com.pupuhk.block"
+                    <a href="https://play.google.com/store/apps/details?id=com.pupuhk.block" target="_blank"
                         class="flex items-center gap-3 glass-card text-white px-8 py-4 rounded-2xl font-bold hover:bg-white/10 transition hover:-translate-y-1">
                         <i class="fa-brands fa-google-play text-2xl text-white/80"></i>
                         <div class="text-left leading-none">
                             <span class="block text-xs font-medium mb-1 opacity-70">Get it on</span>
                             <span class="block text-lg">Google Play</span>
                         </div>
-                    </button>
+                    </a>
                 </div>
             </div>
 
